--- a/config/corne-ish_zen.conf
+++ b/config/corne-ish_zen.conf
@@ -1,8 +1,7 @@
 CONFIG_BT_CTLR_TX_PWR_PLUS_8=y
-# Sleep after 30 minutes (15*60*1000ms) - default is 15 min
+# Sleep after 30 minutes (30*60*1000ms) - default is 15 min
 CONFIG_ZMK_SLEEP=y
-CONFIG_ZMK_IDLE_SLEEP_TIMEOUT=900000
+CONFIG_ZMK_IDLE_SLEEP_TIMEOUT=1800000
 CONFIG_CUSTOM_WIDGET_LAYER_STATUS=n
-
-# Turn on logging, and set ZMK logging to debug output
-CONFIG_ZMK_USB_LOGGING=y
+# Enter idle state after 5 minutes, default is 30 seconds
+CONFIG_ZMK_IDLE_TIMEOUT=300000
