--- a/config/corne-ish_zen.conf
+++ b/config/corne-ish_zen.conf
@@ -5,3 +5,5 @@ CONFIG_ZMK_IDLE_SLEEP_TIMEOUT=7200000
 CONFIG_CUSTOM_WIDGET_LAYER_STATUS=n
 # Enter idle state after 5 minutes, default is 30 seconds
 CONFIG_ZMK_IDLE_TIMEOUT=300000
+# Turn off display
+CONFIG_ZMK_DISPLAY=n
