--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -11,6 +11,7 @@ jobs:
     steps:
       - name: Checkout
         uses: actions/checkout@v5
+
       - name: Cache west modules
         uses: actions/cache@v4
         env:
@@ -22,37 +23,55 @@ jobs:
             zephyr/
             bootloader/
             zmk/
-          key: ${{ runner.os }}-build-${{ env.cache-name }}-${{ hashFiles('manifest-dir/west.yml') }}
+          key: ${{ runner.os }}-build-${{ env.cache-name }}-${{ hashFiles('config/west.yml') }}
           restore-keys: |
             ${{ runner.os }}-build-${{ env.cache-name }}-
             ${{ runner.os }}-build-
             ${{ runner.os }}-
+
       - name: West Init
         run: west init -l config
+
       - name: West Update
         run: west update
+
       - name: West Zephyr export
         run: west zephyr-export
+
+      # Build Left Half
       - name: West Build (Corne-ish Zen Left)
         run: west build -s zmk/app -b corneish_zen_v1_left -- -DZMK_CONFIG="${GITHUB_WORKSPACE}/config"
-      - name: Corne-ish Zen DTS File
+
+      - name: Corne-ish Zen Left DTS File
         if: ${{ always() }}
-        run: cat -n build/zephyr/corneish_zen_v1_left.dts.pre.tmp
+        run: cat -n build/zephyr/zephyr.dts
+
       - name: Corne-ish Zen Left Kconfig file
         run: cat build/zephyr/.config | grep -v "^#" | grep -v "^$"
-      - name: Rename zmk.uf2
+
+      - name: Rename UF2 (Left)
         run: cp build/zephyr/zmk.uf2 corneish_zen_v1_left.uf2
+
       - name: Archive (Corne-ish Zen Left)
         uses: actions/upload-artifact@v4
         with:
           name: firmware_corneish_zen_v1_left
           path: corneish_zen_v1_left.uf2
+
+      # Build Right Half
       - name: West Build (Corne-ish Zen Right)
         run: west build --pristine -s zmk/app -b corneish_zen_v1_right -- -DZMK_CONFIG="${GITHUB_WORKSPACE}/config"
+
+      - name: Corne-ish Zen Right DTS File
+        if: ${{ always() }}
+        run: cat -n build/zephyr/zephyr.dts
+
       - name: Corne-ish Zen Right Kconfig file
         run: cat build/zephyr/.config | grep -v "^#" | grep -v "^$"
-      - name: Rename zmk.uf2
+
+      - name: Rename UF2 (Right)
         run: cp build/zephyr/zmk.uf2 corneish_zen_v1_right.uf2
+
       - name: Archive (Corne-ish Zen Right)
         uses: actions/upload-artifact@v4
         with:
