turn on display

--- a/config/corneish_zen.conf
+++ b/config/corneish_zen.conf
@@ -6,4 +6,4 @@ CONFIG_CUSTOM_WIDGET_LAYER_STATUS=n
 # Enter idle state after 5 minutes, default is 30 seconds
 CONFIG_ZMK_IDLE_TIMEOUT=300000
 # Turn off display
-CONFIG_ZMK_DISPLAY=n
+CONFIG_ZMK_DISPLAY=y
