--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -6,7 +6,7 @@ jobs:
   build:
     runs-on: ubuntu-latest
     container:
-      image: zmkfirmware/zmk-build-arm:0.2
+      image: zmkfirmware/zmk-build-arm:stable
     name: Build
     steps:
       - name: Checkout
@@ -40,7 +40,7 @@ jobs:
 
       # Build Left Half
       - name: West Build (Corne-ish Zen Left)
-        run: west build -s zmk/app -b corneish_zen_v1_left -- -DZMK_CONFIG="${GITHUB_WORKSPACE}/config"
+        run: west build -s zmk/app -b corneish_zen_left@1 -- -DZMK_CONFIG="${GITHUB_WORKSPACE}/config"
 
       - name: Corne-ish Zen Left DTS File
         if: ${{ always() }}
@@ -60,7 +60,7 @@ jobs:
 
       # Build Right Half
       - name: West Build (Corne-ish Zen Right)
-        run: west build --pristine -s zmk/app -b corneish_zen_v1_right -- -DZMK_CONFIG="${GITHUB_WORKSPACE}/config"
+        run: west build --pristine -s zmk/app -b corneish_zen_right@1 -- -DZMK_CONFIG="${GITHUB_WORKSPACE}/config"
 
       - name: Corne-ish Zen Right DTS File
         if: ${{ always() }}
